[package]
name = "haterbot"
version = "0.1.0"
authors = ["David Forsythe <dforsythe@gmail.com>"]

[[bin]]
doc = false
path = "src/main.rs"
name = "haterbot"

[dependencies]
slack = "0.19.0"
slack_api = "0.19.0"
log = "0.4"
reqwest = "0.8.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0"
simplelog = "^0.5.0"

binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
