[package]
name = "haterbot"
version = "0.1.0"
authors = ["David Forsythe <dforsythe@gmail.com>"]

[[bin]]
doc = false
path = "src/main.rs"
name = "haterbot"

[dependencies]
slack = "0.22.0"
slack_api = "0.21.0"
log = "0.4.6"
reqwest = "0.9.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
simplelog = "0.5.3"
rand = "0.6.1"

# binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
